[gd_scene load_steps=15 format=2]

[ext_resource path="res://Clock.gd" type="Script" id=1]
[ext_resource path="res://Time.gd" type="Script" id=2]
[ext_resource path="res://TerminalDosis-ExtraLight.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://ResetTimeButton.gd" type="Script" id=4]
[ext_resource path="res://UndoText.gd" type="Script" id=5]
[ext_resource path="res://TimeChangedLabel.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=9]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=1]
size = 75
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 45
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 45
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=6]
size = 45
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 30
use_filter = true
extra_spacing_top = -7
extra_spacing_char = -5
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=7]
size = 39
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=10]
size = 73
font_data = ExtResource( 3 )

[node name="Main_Clock" type="Timer"]
wait_time = 0.1
script = ExtResource( 1 )

[node name="Undo_Timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="Control" type="Control" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="TimeChangedLabel" type="RichTextLabel" parent="Control"]
margin_left = 281.0
margin_top = 190.0
margin_right = 720.0
margin_bottom = 252.0
custom_fonts/normal_font = SubResource( 9 )
text = "test"
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeChangedTimer" type="Timer" parent="Control/TimeChangedLabel"]
wait_time = 1.2
one_shot = true

[node name="Time" type="RichTextLabel" parent="Control"]
margin_left = 277.0
margin_top = 348.0
margin_right = 747.0
margin_bottom = 448.0
custom_fonts/normal_font = SubResource( 1 )
text = "00:00:00:00:00"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ToggleButton" type="Button" parent="Control"]
margin_right = 220.0
margin_bottom = 180.0
custom_fonts/font = SubResource( 2 )
text = "Toggle Cycle"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResetTimeButton" type="Button" parent="Control"]
margin_left = 804.0
margin_right = 1024.0
margin_bottom = 180.0
custom_fonts/font = SubResource( 5 )
text = "Reset Time"
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UndoText" type="RichTextLabel" parent="Control/ResetTimeButton"]
margin_left = 79.0
margin_top = 205.0
margin_right = 220.0
margin_bottom = 299.0
custom_fonts/normal_font = SubResource( 6 )
visible_characters = 3
text = "0.0"
scroll_active = false
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Change_Time_Buttons" type="Node" parent="Control"]

[node name="YAButton" type="Button" parent="Control/Change_Time_Buttons"]
margin_left = 281.0
margin_top = 340.0
margin_right = 358.0
margin_bottom = 409.0
rect_rotation = -90.0
custom_fonts/font = SubResource( 4 )
text = " >"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DAButton" type="Button" parent="Control/Change_Time_Buttons"]
margin_left = 368.0
margin_top = 340.0
margin_right = 445.0
margin_bottom = 409.0
rect_rotation = -90.0
custom_fonts/font = SubResource( 4 )
text = " >"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HAButton" type="Button" parent="Control/Change_Time_Buttons"]
margin_left = 463.0
margin_top = 341.0
margin_right = 540.0
margin_bottom = 410.0
rect_rotation = -90.0
custom_fonts/font = SubResource( 4 )
text = " >"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MAButton" type="Button" parent="Control/Change_Time_Buttons"]
margin_left = 556.0
margin_top = 341.0
margin_right = 633.0
margin_bottom = 410.0
rect_rotation = -90.0
custom_fonts/font = SubResource( 4 )
text = " >"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SAButton" type="Button" parent="Control/Change_Time_Buttons"]
margin_left = 651.0
margin_top = 341.0
margin_right = 728.0
margin_bottom = 410.0
rect_rotation = -90.0
custom_fonts/font = SubResource( 4 )
text = " >"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="YSButton" type="Button" parent="Control/Change_Time_Buttons"]
margin_left = 352.0
margin_top = 457.0
margin_right = 429.0
margin_bottom = 526.0
rect_rotation = 90.0
custom_fonts/font = SubResource( 4 )
text = " >"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DSButton" type="Button" parent="Control/Change_Time_Buttons"]
margin_left = 442.0
margin_top = 458.0
margin_right = 519.0
margin_bottom = 527.0
rect_rotation = 90.0
custom_fonts/font = SubResource( 4 )
text = " >"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSButton" type="Button" parent="Control/Change_Time_Buttons"]
margin_left = 533.0
margin_top = 458.0
margin_right = 610.0
margin_bottom = 527.0
rect_rotation = 90.0
custom_fonts/font = SubResource( 4 )
text = " >"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MSButton" type="Button" parent="Control/Change_Time_Buttons"]
margin_left = 624.0
margin_top = 457.0
margin_right = 701.0
margin_bottom = 526.0
rect_rotation = 90.0
custom_fonts/font = SubResource( 4 )
text = " >"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SSButton" type="Button" parent="Control/Change_Time_Buttons"]
margin_left = 718.0
margin_top = 456.0
margin_right = 795.0
margin_bottom = 525.0
rect_rotation = 90.0
custom_fonts/font = SubResource( 4 )
text = " >"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Control"]
margin_left = 281.0
margin_top = 530.0
margin_right = 720.0
margin_bottom = 600.0
custom_fonts/normal_font = SubResource( 7 )
text = "   Y         M        H         M         S"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel2" type="RichTextLabel" parent="Control"]
margin_left = 285.0
margin_top = 3.0
margin_right = 721.0
margin_bottom = 109.0
custom_fonts/normal_font = SubResource( 10 )
text = "Clock Operation"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="." to="." method="_on_DN_Cycle_timeout"]
[connection signal="undo_text_start" from="." to="Control/ResetTimeButton/UndoText" method="_on_Main_Clock_undo_text_start"]
[connection signal="timeout" from="Undo_Timer" to="Control/ResetTimeButton" method="_on_Undo_Timer_timeout"]
[connection signal="timeout" from="Control/TimeChangedLabel/TimeChangedTimer" to="Control/TimeChangedLabel" method="_on_TimeChangedTimer_timeout"]
[connection signal="pressed" from="Control/ToggleButton" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Control/ResetTimeButton" to="." method="_on_ResetTimeButton_pressed"]
[connection signal="pressed" from="Control/ResetTimeButton" to="Control/ResetTimeButton" method="_on_ResetTimeButton_pressed"]
[connection signal="pressed" from="Control/Change_Time_Buttons/YAButton" to="." method="_on_YAButton_pressed"]
[connection signal="pressed" from="Control/Change_Time_Buttons/DAButton" to="." method="_on_DAButton_pressed"]
[connection signal="pressed" from="Control/Change_Time_Buttons/HAButton" to="." method="_on_HAButton_pressed"]
[connection signal="pressed" from="Control/Change_Time_Buttons/MAButton" to="." method="_on_MAButton_pressed"]
[connection signal="pressed" from="Control/Change_Time_Buttons/SAButton" to="." method="_on_SAButton_pressed"]
[connection signal="pressed" from="Control/Change_Time_Buttons/YSButton" to="." method="_on_YSButton_pressed"]
[connection signal="pressed" from="Control/Change_Time_Buttons/DSButton" to="." method="_on_DSButton_pressed"]
[connection signal="pressed" from="Control/Change_Time_Buttons/HSButton" to="." method="_on_HSButton_pressed"]
[connection signal="pressed" from="Control/Change_Time_Buttons/MSButton" to="." method="_on_MSButton_pressed"]
[connection signal="pressed" from="Control/Change_Time_Buttons/SSButton" to="." method="_on_SSButton_pressed"]
